--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stylexjs/stylex": "^0.12.0",
     "antd": "^5.24.6",
     "bootstrap": "^5.3.5",
     "react": "^19.0.0",
