--- a/.github/ISSUE_TEMPLATE/design.yml
+++ b/.github/ISSUE_TEMPLATE/design.yml
@@ -41,4 +41,4 @@ body:
     attributes:
       label: 담당자
       description: 이슈를 처리할 담당자의 GitHub 아이디를 입력해주세요.
-      placeholder: @
+      placeholder: 
