--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -32,4 +32,4 @@ body:
     attributes:
       label: 담당자
       description: 이 이슈를 다룰 담당자가 있다면 GitHub 아이디를 입력해주세요.
-      placeholder: @
+      placeholder: 
