--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@stylexjs/stylex": "^0.12.0",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
-    "react": "^19.0.0",
+    "jwt-decode": "^4.0.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^7.5.0",
     "recoil": "^0.7.7"
   },
