--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@stylexjs/stylex": "^0.12.0",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
+    "body-parser": "^2.2.0",
     "bootstrap": "^5.3.5",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "web-vitals": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -31,8 +36,9 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "styled-components": "^6.1.18",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.3.5"
   }
 }
